@@ -1,0 +1,29 @@
+Trace: -isnumber 6 ? TRUE at assert2.sl:10
+Trace: -istrue 6 ? TRUE at assert2.sl:11
+Trace: 6 >= 0 ? TRUE at assert2.sl:12
+Trace: -isnumber 5 ? TRUE at assert2.sl:10
+Trace: -istrue 5 ? TRUE at assert2.sl:11
+Trace: 5 >= 0 ? TRUE at assert2.sl:12
+Trace: -isnumber 4 ? TRUE at assert2.sl:10
+Trace: -istrue 4 ? TRUE at assert2.sl:11
+Trace: 4 >= 0 ? TRUE at assert2.sl:12
+Trace: -isnumber 3 ? TRUE at assert2.sl:10
+Trace: -istrue 3 ? TRUE at assert2.sl:11
+Trace: 3 >= 0 ? TRUE at assert2.sl:12
+Trace: -isnumber 2 ? TRUE at assert2.sl:10
+Trace: -istrue 2 ? TRUE at assert2.sl:11
+Trace: 2 >= 0 ? TRUE at assert2.sl:12
+Trace: -isnumber 1 ? TRUE at assert2.sl:10
+Trace: -istrue 1 ? TRUE at assert2.sl:11
+Trace: 1 >= 0 ? TRUE at assert2.sl:12
+Trace: -isnumber 0 ? TRUE at assert2.sl:10
+Trace: -istrue 0 ? FALSE at assert2.sl:11
+Trace: &exit('assertion failed') - FAILED! at assert2.sl:11
+Warning: assertion failed at assert2.sl:11
+Trace: &fact(0) - FAILED! at assert2.sl:13
+Trace: &fact(1) - FAILED! at assert2.sl:13
+Trace: &fact(2) - FAILED! at assert2.sl:13
+Trace: &fact(3) - FAILED! at assert2.sl:13
+Trace: &fact(4) - FAILED! at assert2.sl:13
+Trace: &fact(5) - FAILED! at assert2.sl:13
+Trace: &fact(6) - FAILED! at assert2.sl:16
